NO-JIRA: Justerer notifikasjoner for de som har sluttet eller ikke finner e-post. Endrer til warning